--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "heading": "Hey, I'm Olivier Goulet 👋",
+    "heading": "Hey, I'm Olivier 👋",
     "subheading": { 
         "part1": "Are you looking for a web developer for your project?",
         "part2": "Send me a message!"
