--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,5 +1,5 @@
 {
-    "heading": "Salut, je m'appelle Olivier Goulet 👋",
+    "heading": "Salut, je m'appelle Olivier 👋",
     "subheading": {
         "part1": "Votre projet nécessite-t-il un développeur web?",
         "part2": "Lancez-moi un message!"
