--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,8 +1,14 @@
 {
-    "heading": "Salut, je m'appelle Olivier 👋",
-    "subheading": {
-        "part1": "Votre projet nécessite-t-il un développeur web?",
-        "part2": "Lancez-moi un message!"
+    "home": {
+        "heading": "Salut, je m'appelle Olivier 👋",
+        "subheading": {
+            "part1": "Votre projet nécessite-t-il un développeur web?",
+            "part2": "Lancez-moi un message!"
+        },
+        "buttons": {
+            "contact": "Contactez",
+            "download": "Téléchargez CV"
+        }
     },
     "navigationBar": {
         "links": {
