--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -23,7 +23,22 @@
             "part2": "J'ai participé à plusieurs hackathons au cours de mes années universitaires et j'ai rencontré de nombreux futurs développeurs de logiciels intéressants. Ces événements m'ont donné envie de continuer à apprendre au-delà du programme et de poursuivre des «side-projects» dont je peux être fier."
         },
         "caption": "Aux premiers NSBEHacks à l'Université de Toronto, en 2018."
-
+    },
+    "contact": {
+        "heading": "Contactez-moi",
+        "subheading": "N'hésitez pas à m'envoyer un message sur le site ou sur les réseaux sociaux!",
+        "options": {
+            "message": "Messagez",
+            "or": "ou",
+            "discord": "Mon nom d'utilisateur sur Discord est zxcv#6382."
+        },
+        "form": {
+            "email": "Courriel",
+            "name": "Nom",
+            "subject": "Sujet",
+            "message": "Message",
+            "send": "Envoyez"
+        }
     },
     "navigationBar": {
         "links": {
