--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
     "home": {
         "heading": "Hey, I'm Olivier 👋",
         "subheading": { 
-            "part1": "Are you looking for a web developer for your project?",
+            "part1": "I am a front-end web developer",
             "part2": "Send me a message!"
         },
         "buttons": {
