--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -2,7 +2,7 @@
     "home": {
         "heading": "Salut, je m'appelle Olivier 👋",
         "subheading": {
-            "part1": "Votre projet nécessite-t-il un développeur web?",
+            "part1": "Je suis un développeur web front-end",
             "part2": "Lancez-moi un message!"
         },
         "buttons": {
