--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -106,6 +106,7 @@
             "about": "About",
             "projects": "Projects",
             "resume": "Resume",
+            "experiences": "Experiences",
             "contact": "Contact"
         }
     }
