--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -96,6 +96,7 @@
             "about": "À propos",
             "projects": "Projets",
             "resume": "Resumé",
+            "experiences": "Expériences",
             "contact": "Contactez"
         }
     }
